--- a/DATA601/homework/code.ipynb
+++ b/DATA601/homework/code.ipynb
@@ -22,24 +22,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = 2/3\n",
+    "z = norm.ppf(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.6448536269514729"
+       "np.float64(0.1948945212518084)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p = 0.05\n",
-    "z = norm.ppf(p)\n",
-    "z"
+    "z = 0.86\n",
+    "p = norm.cdf(z)"
    ]
   },
   {
@@ -165,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -179,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
