--- a/DATA602/coursecode/Copy of CMSC320-EDA-TitanicDataset.ipynb
+++ b/DATA602/coursecode/Copy of CMSC320-EDA-TitanicDataset.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 140,
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 135,
@@ -101,105 +101,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Zsc89Vd2dyDi"
-   },
-   "source": [
-    "Asling the right questions:\n",
-    "\n",
-    "Some list of questions:\n",
-    "\n",
-    "* What is the demographic breakdown of passengers?\n",
-    "* What was the overall survival rate of passengers on the Titanic?\n",
-    "* Did age have an impact on survival rates?\n",
-    "* Were passengers in higher classes more likely to survive?\n",
-    "* What was the distribution of fares paid by passengers?\n",
-    "* Were families more likely to survive together?\n",
-    "* Did the point of embarkation impact survival rates?\n",
-    "* How did gender influence survival rates?\n",
-    "* Were there any patterns in passenger names or titles that might be interesting?\n",
-    "* What is the correlation between various features (e.g., age, fare, class)?\n",
-    "* What was the distribution of fares paid by passengers?\n",
-    "* What was the survival rate of different passenger classes broken down by gender?\n",
-    "\n",
-    "More refined questions:\n",
-    "\n",
-    "* Do first-class passengers have a higher survival rate compared to third-class passengers?\"\n",
-    "* Is there a significant difference in survival rates between males and females?\"\n",
-    "* How does age impact the likelihood of survival?\n",
-    "* Are passengers who embarked from different ports more likely to survive?\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "KmUgI6cIkvDm"
-   },
-   "source": [
-    "**An EDA checklist**\n",
-    "If a checklist is good enough for pilots to use every flight, it’s good enough for data scientists to use with every dataset.\n",
-    "\n",
-    "An EDA checklist\n",
-    "1. What question(s) are you trying to solve (or prove wrong)?\n",
-    "2. What kind of data do you have and how do you treat different types?\n",
-    "3. What’s missing from the data and how do you deal with it?\n",
-    "4. Where are the outliers and why should you care about them?\n",
-    "5. How can you add, change or remove features to get more out of your data?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "MosU5euxeRvv"
-   },
-   "source": [
-    "# A Starting Point"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "s7J49xxPRi4e"
-   },
-   "source": [
-    "\n",
-    "**Data exploration is the process of understanding your data.**\n",
-    "\n",
-    "Key steps include:\n",
-    "\n",
-    "Checking data types\n",
-    "\n",
-    "Identifying missing values\n",
-    "\n",
-    "Calculating basic statistics (mean, median, standard deviation)\n",
-    "\n",
-    "more....."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 363
-    },
-    "executionInfo": {
-     "elapsed": 8,
-     "status": "ok",
-     "timestamp": 1730667769382,
-     "user": {
-      "displayName": "印海睿",
-      "userId": "12450737954852033966"
-     },
-     "user_tz": 300
-    },
-    "id": "wiQbzpKUQihe",
-    "outputId": "b1c0ae21-3d6a-452b-e0eb-e560970a2f7b"
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -312,81 +216,6 @@
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Moran, Mr. James</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>330877</td>\n",
-       "      <td>8.4583</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>McCarthy, Mr. Timothy J</td>\n",
-       "      <td>male</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17463</td>\n",
-       "      <td>51.8625</td>\n",
-       "      <td>E46</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Palsson, Master. Gosta Leonard</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>349909</td>\n",
-       "      <td>21.0750</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>347742</td>\n",
-       "      <td>11.1333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Nasser, Mrs. Nicholas (Adele Achem)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>237736</td>\n",
-       "      <td>30.0708</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -398,11 +227,6 @@
        "2            3         1       3   \n",
        "3            4         1       1   \n",
        "4            5         0       3   \n",
-       "5            6         0       3   \n",
-       "6            7         0       1   \n",
-       "7            8         0       3   \n",
-       "8            9         1       3   \n",
-       "9           10         1       2   \n",
        "\n",
        "                                                Name     Sex   Age  SibSp  \\\n",
        "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
@@ -410,26 +234,182 @@
        "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
        "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
        "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-       "5                                   Moran, Mr. James    male   NaN      0   \n",
-       "6                            McCarthy, Mr. Timothy J    male  54.0      0   \n",
-       "7                     Palsson, Master. Gosta Leonard    male   2.0      3   \n",
-       "8  Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  female  27.0      0   \n",
-       "9                Nasser, Mrs. Nicholas (Adele Achem)  female  14.0      1   \n",
        "\n",
        "   Parch            Ticket     Fare Cabin Embarked  \n",
        "0      0         A/5 21171   7.2500   NaN        S  \n",
        "1      0          PC 17599  71.2833   C85        C  \n",
        "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
        "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  \n",
-       "5      0            330877   8.4583   NaN        Q  \n",
-       "6      0             17463  51.8625   E46        S  \n",
-       "7      1            349909  21.0750   NaN        S  \n",
-       "8      2            347742  11.1333   NaN        S  \n",
-       "9      0            237736  30.0708   NaN        C  "
+       "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Windows\\Temp\\ipykernel_15008\\721584535.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  df[df[\"Age\"] > 10][df[\"Age\"] < 20][\"Parch\"]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9      0\n",
+       "14     0\n",
+       "22     0\n",
+       "27     2\n",
+       "38     0\n",
+       "      ..\n",
+       "853    1\n",
+       "855    1\n",
+       "875    0\n",
+       "877    0\n",
+       "887    0\n",
+       "Name: Parch, Length: 100, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"Age\"] > 10][df[\"Age\"] < 20][\"Parch\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Zsc89Vd2dyDi"
+   },
+   "source": [
+    "Asling the right questions:\n",
+    "\n",
+    "Some list of questions:\n",
+    "\n",
+    "* What is the demographic breakdown of passengers?\n",
+    "* What was the overall survival rate of passengers on the Titanic?\n",
+    "* Did age have an impact on survival rates?\n",
+    "* Were passengers in higher classes more likely to survive?\n",
+    "* What was the distribution of fares paid by passengers?\n",
+    "* Were families more likely to survive together?\n",
+    "* Did the point of embarkation impact survival rates?\n",
+    "* How did gender influence survival rates?\n",
+    "* Were there any patterns in passenger names or titles that might be interesting?\n",
+    "* What is the correlation between various features (e.g., age, fare, class)?\n",
+    "* What was the distribution of fares paid by passengers?\n",
+    "* What was the survival rate of different passenger classes broken down by gender?\n",
+    "\n",
+    "More refined questions:\n",
+    "\n",
+    "* Do first-class passengers have a higher survival rate compared to third-class passengers?\"\n",
+    "* Is there a significant difference in survival rates between males and females?\"\n",
+    "* How does age impact the likelihood of survival?\n",
+    "* Are passengers who embarked from different ports more likely to survive?\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "KmUgI6cIkvDm"
+   },
+   "source": [
+    "**An EDA checklist**\n",
+    "If a checklist is good enough for pilots to use every flight, it’s good enough for data scientists to use with every dataset.\n",
+    "\n",
+    "An EDA checklist\n",
+    "1. What question(s) are you trying to solve (or prove wrong)?\n",
+    "2. What kind of data do you have and how do you treat different types?\n",
+    "3. What’s missing from the data and how do you deal with it?\n",
+    "4. Where are the outliers and why should you care about them?\n",
+    "5. How can you add, change or remove features to get more out of your data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "MosU5euxeRvv"
+   },
+   "source": [
+    "# A Starting Point"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "s7J49xxPRi4e"
+   },
+   "source": [
+    "\n",
+    "**Data exploration is the process of understanding your data.**\n",
+    "\n",
+    "Key steps include:\n",
+    "\n",
+    "Checking data types\n",
+    "\n",
+    "Identifying missing values\n",
+    "\n",
+    "Calculating basic statistics (mean, median, standard deviation)\n",
+    "\n",
+    "more....."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 363
+    },
+    "executionInfo": {
+     "elapsed": 8,
+     "status": "ok",
+     "timestamp": 1730667769382,
+     "user": {
+      "displayName": "印海睿",
+      "userId": "12450737954852033966"
+     },
+     "user_tz": 300
+    },
+    "id": "wiQbzpKUQihe",
+    "outputId": "b1c0ae21-3d6a-452b-e0eb-e560970a2f7b"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                Braund, Mr. Owen Harris\n",
+       "1      Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
+       "2                                 Heikkinen, Miss. Laina\n",
+       "3           Futrelle, Mrs. Jacques Heath (Lily May Peel)\n",
+       "4                               Allen, Mr. William Henry\n",
+       "                             ...                        \n",
+       "886                                Montvila, Rev. Juozas\n",
+       "887                         Graham, Miss. Margaret Edith\n",
+       "888             Johnston, Miss. Catherine Helen \"Carrie\"\n",
+       "889                                Behr, Mr. Karl Howell\n",
+       "890                                  Dooley, Mr. Patrick\n",
+       "Name: Name, Length: 891, dtype: object"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +418,8 @@
     "# before diving into analysis, it's crucial to understand your data; especially when you have limited prior knowledge about its contents.\n",
     "\n",
     "# Look at our data frame\n",
-    "df.head(10)"
+    "df.head(10)\n",
+    "df['Name']"
    ]
   },
   {
@@ -1537,7 +1518,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1551,7 +1532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
