--- a/DATA603/midterm.ipynb
+++ b/DATA603/midterm.ipynb
@@ -114,9 +114,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.8,  0.6],\n",
+       "        [ 0.6,  0.8]]),\n",
+       " array([5. , 2.5]),\n",
+       " array([[-1.15228279e-16, -4.33065218e-17,  1.00000000e+00],\n",
+       "        [ 8.00000000e-01,  6.00000000e-01, -1.16877487e-16],\n",
+       "        [ 6.00000000e-01, -8.00000000e-01, -5.55111512e-17]]))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "B = np.array([[1.2, 0.9, -4], [1.6, 1.2, 3]])\n",
     "U, S, Vt = np.linalg.svd(B)\n",
