--- a/DATA603/homework/homework8/code.ipynb
+++ b/DATA603/homework/homework8/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,8 @@
     "plt.ylabel(\"Loss\")  # Label y-axis\n",
     "plt.legend()  # Optional: Add legend\n",
     "plt.grid()  # Optional: Add gridlines\n",
-    "plt.show()  # Display the plot"
+    "# plt.show()  # Display the plot\n",
+    "plt.savefig('figure1.png', dpi=400)"
    ]
   }
  ],
