Sol DATA601 HW12

--- a/DATA601/homework/code.ipynb
+++ b/DATA601/homework/code.ipynb
@@ -170,6 +170,50 @@
     "n = np.arange(1, 1001)\n",
     "((n/1000)**2).sum()/1000"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HW 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.00000000e-01, 5.00000000e-01, 1.50112299e-25])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 定义一个方阵\n",
+    "A = np.array([[1, 0, 0],\n",
+    "              [0, 1, 0],\n",
+    "              [1/36, 1/36, 17/18]])\n",
+    "\n",
+    "\n",
+    "# 求解特征值和特征向量\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(A)\n",
+    "\n",
+    "# 构造对角矩阵和变换矩阵\n",
+    "D = np.diag(eigenvalues)  # 对角矩阵\n",
+    "P = eigenvectors          # 特征向量矩阵\n",
+    "\n",
+    "# 验证对角化：A = P * D * P^(-1)\n",
+    "A_reconstructed = np.array([0, 0, 1]) @ P @ np.linalg.matrix_power(D, 1000) @ np.linalg.inv(P)\n",
+    "A_reconstructed"
+   ]
   }
  ],
  "metadata": {
